--- a/app/src/main/res/layout/appnt_edit.xml
+++ b/app/src/main/res/layout/appnt_edit.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="date"
+            android:textSize="20sp"
             android:textColor="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="time"
+            android:textSize="20sp"
             android:textColor="@color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
